version 0.33, ?

* Bugfix Common-IP (same minimal and max ip addresses) was buggy for
  SMP configurations.

* Corrected Timeouted to "Timed Out". Thanks to BuraphaLinux Server
  <buraphalinuxserver@gmail.com> for the patch.

* Advanced to curl-7.16.3. Several patches removed as they are now in 
   mainline curl. Re-based and corrected patch curl-hash.patch, submitted it to curl.

* Throughput limit for download/upload operations can be configured for each client 
   now on a per-url bases using a new tag TRANSFER_LIMIT_RATE. The value of
   the tag to be provided as bytes (not bits) per second.
   Makefile: -D_FILE_OFFSET_BITS=64 - added to compiling to ensure support for
   large files (>4GB).

* Initial support for multipart form data POST-ing as in RFC1867 has been added. 
   Several tags MULTIPART_FORM_DATA can be used for a url to post in a 
   configuration file, e.g. as in ./conf-examples/multipart-formdata-post.conf:
	
   MULTIPART_FORM_DATA="yourname=Michael"
   MULTIPART_FORM_DATA="filedescription=Cool text file with cool text inside"
   MULTIPART_FORM_DATA="htmlcode=<HTML></HTML>;type=text/html"
   MULTIPART_FORM_DATA="file=@cooltext.txt"
   MULTIPART_FORM_DATA="coolfiles=@fil1.gif,fil2.txt,fil3.html"

   Currently, the feature uses the strings provided AS_IS and does not generate
   any unique users, unique passwords or loads tokens from file.

   To prevent from sending "Expect: 100-continue", pass as a custom HTTP header
   CUSTOM_HEADER="Expect: "

   Still, should be tested as we do not have and server side for that.



version 0.32, 21/06/2007, svn 431

* Newly added tag per url RESPONSE_STATUS_ERRORS supports changes to the
   default set of response statuses considered by errors. By default 4xx without
   401 and 407 and all 5xx response codes are treated as errors.
   Now you can either add a status to the errors or remove it. Sign + adds, - removes.
   The syntaxes is a line of tokens separated by ',', where each tokens begins with either